# simple_task_manager

./: .flake8  .gitignore  .pre-commit-config.yaml  ANSWERS.md  Makefile  README.md  default.env  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 007a920e369c_timestameped_tasks.py  10eeef04580a_create_tasks_projects_and_history.py  342a1f098ae1_create_users_table.py
backend/app/: main.py
backend/app/core/: __init__.py  base_models.py  celery.py  config.py  db.py
backend/app/tracker/models/: __init__.py  project.py  task.py  task_history.py  task_statuses.py
backend/app/tracker/routes/: task.py
backend/app/tracker/schemas/: __init__.py  task.py
backend/app/tracker/services/: task.py
backend/app/users/models/: users.py
