[project]
name = "simple_task_manager"
version = "0.1.0"
dependencies = [
    "alembic==1.18.1",
    "celery==5.6.2",
    "fastapi[standard]==0.135.1",
    "psycopg[binary]==3.3.2",
    "pydantic-settings==2.12.0",
    "sqlmodel==0.0.37",
    "uvicorn[standard]==0.41.0",
]

[project.optional-dependencies]

dev = [
    "black==26.1.0", 
    "flake8==7.3.0",
    "pre-commit==4.5.1",
]

[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '''
/(
    \.venv
  | alembic/versions/.*
)/
'''
